@@ -36,30 +36,6 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${surefire.version}</version>
-                <configuration>
-                    <reuseForks>false</reuseForks>
-                    <forkMode>never</forkMode>
-                    <systemProperties>
-                        <property>
-                            <name>java.endorsed.dirs</name>
-                            <value>${basedir}/target/endorsed</value>
-                        </property>
-                        <property>
-                            <name>java.util.logging.config.file</name>
-                            <value>${project.parent.basedir}/logging.properties</value>
-                        </property>
-                        <property>
-                            <name>jvm</name>
-                            <value>-Xms512m -Xmx1024m -XX:PermSize=512m -XX:MaxPermSize=1024m</value>
-                        </property>
-                    </systemProperties>
-                    <workingDirectory>${project.parent.basedir}</workingDirectory>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.4</version>
                 <executions>
